--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,379 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_main"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.MainWindow"
     tools:context=".MainActivity">
+
+    <NumberPicker
+        android:id="@+id/ram_qt_capacity"
+        android:layout_width="87dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="48dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/ram_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/ram_capacity" />
+
+    <NumberPicker
+        android:id="@+id/ssd_nb_capacity"
+        android:layout_width="87dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="48dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/ssd_nb_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_capacity" />
+
+    <TextView
+        android:id="@+id/ram_capacity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/capacity_gb"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/cpu_quantite4"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_core_unit" />
+
+    <TextView
+        android:id="@+id/ssd_capacity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/capacity_gb"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/ssd_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/ram_qt_capacity" />
+
+    <TextView
+        android:id="@+id/ssd_capacity2"
+        android:layout_width="265dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/capacity_gb"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/ssd_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_nb_capacity" />
+
+    <TextView
+        android:id="@+id/ram_manifacture"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/manufacturer"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/ram_capacity"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_name_architecture" />
+
+    <TextView
+        android:id="@+id/ssd_manufacturer"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/manufacturer"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/ssd_capacity"
+        app:layout_constraintTop_toBottomOf="@+id/ram_name_manufacturer" />
+
+    <TextView
+        android:id="@+id/cpu_quantite4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/quantite"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_qt_np" />
+
+    <TextView
+        android:id="@+id/cpu_quantite6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/quantite"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_nb_quantite" />
+
+    <TextView
+        android:id="@+id/ssd_quantite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/quantite"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ram_quantite" />
+
+    <ImageView
+        android:id="@+id/BoaviztaButtonHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/image_du_haut"
+        android:foregroundTint="#00FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher" />
+
+    <TextView
+        android:id="@+id/BoaviztaTextHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:fontFamily="sans-serif-medium"
+        android:minHeight="48dp"
+        android:text="@string/boavizta"
+        android:textColor="@color/greenDark_boavizt"
+        android:textColorHighlight="@color/greenDark_boavizt"
+        android:textSize="34sp"
+        app:layout_constraintStart_toEndOf="@+id/BoaviztaButtonHeader"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/BoaviztaSousTextHeader"
+        style="@android:style/Widget.Holo.TextView"
+        android:layout_width="391dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="#00838F"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BoaviztaTextHeader" />
+
+    <TextView
+        android:id="@+id/title_content"
+        android:layout_width="304dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="100dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/config_server"
+        android:textAlignment="center"
+        android:textColor="#E0F2F1"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BoaviztaSousTextHeader" />
+
+    <TextView
+        android:id="@+id/cpu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/cpu"
+        android:textColor="#E0F2F1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_content" />
+
+    <TextView
+        android:id="@+id/ram"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/ram"
+        android:textColor="#E0F2F1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_qt_np" />
+
+    <TextView
+        android:id="@+id/ssd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/ssd"
+        android:textColor="#E0F2F1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ram_quantite" />
+
+    <TextView
+        android:id="@+id/hdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/hdd"
+        android:textColor="#E0F2F1"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_nb_quantite" />
+
+    <TextView
+        android:id="@+id/cpu_quantite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/quantite"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu" />
+
+    <TextView
+        android:id="@+id/nbr_coeur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/nb_coeurs"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/cpu_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/cpu" />
+
+    <TextView
+        android:id="@+id/cpu_architecture"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/architecture"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/nbr_coeur"
+        app:layout_constraintTop_toBottomOf="@+id/cpu" />
+
+    <NumberPicker
+        android:id="@+id/cpu_qt_np"
+        style="@android:style/Widget.Material.NumberPicker"
+        android:layout_width="54dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_quantite" />
+
+    <NumberPicker
+        android:id="@+id/ram_quantite"
+        android:layout_width="54dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_quantite4" />
+
+    <NumberPicker
+        android:id="@+id/ssd_nb_quantite"
+        android:layout_width="54dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_quantite" />
+
+    <NumberPicker
+        android:id="@+id/hdd_nb_quantite"
+        android:layout_width="54dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="16dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_quantite6" />
+
+    <NumberPicker
+        android:id="@+id/cpu_core_unit"
+        android:layout_width="66dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="50dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/cpu_qt_np"
+        app:layout_constraintTop_toBottomOf="@+id/nbr_coeur" />
+
+    <NumberPicker
+        android:id="@+id/cpu_name_architecture"
+        android:layout_width="156dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="42dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/cpu_core_unit"
+        app:layout_constraintTop_toBottomOf="@+id/cpu_architecture" />
+
+    <NumberPicker
+        android:id="@+id/ram_name_manufacturer"
+        android:layout_width="156dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="21dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/ram_qt_capacity"
+        app:layout_constraintTop_toBottomOf="@+id/ram_manifacture" />
+
+    <NumberPicker
+        android:id="@+id/hdd_nb_capacity"
+        android:layout_width="265dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="48dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/hdd_nb_quantite"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_capacity2" />
+
+    <NumberPicker
+        android:id="@+id/ssd_name_manufacturer"
+        android:layout_width="156dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="21dp"
+        android:textColorHint="#E0F2F1"
+        app:layout_constraintStart_toEndOf="@+id/ssd_nb_capacity"
+        app:layout_constraintTop_toBottomOf="@+id/ssd_manufacturer" />
+
+    <ImageButton
+        android:id="@+id/calculate_btn"
+        android:layout_width="310dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#00FFFFFF"
+        android:contentDescription="@string/button_calculate"
+        android:focusableInTouchMode="false"
+        android:scaleType="center"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/calculate__300___65_px___1_"
+        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,RedundantDescriptionCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
