--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/CustomTextLoading"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="95dp"
