Amélioration du design, optimisation du code

--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_main"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar.MainWindow"
+    android:theme="@style/Theme.AppCompat.NoActionBar.Boavizta"
     tools:context=".Error">
 
 
@@ -75,8 +75,8 @@
 
     <TextView
         android:id="@+id/test_error"
-        android:layout_width="406dp"
-        android:layout_height="26dp"
+        android:layout_width="410dp"
+        android:layout_height="83dp"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="@string/couldn_t_get_json_from_server"
         android:textAlignment="center"
@@ -92,12 +92,15 @@
         android:layout_width="231dp"
         android:layout_height="54dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="112dp"
         android:layout_marginEnd="70dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/green_boavizt"
         android:text="@string/try_again"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test_error" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
