--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.AppCompat.Light.NoActionBar.Boavizta" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.AppCompat.NoActionBar.Boavizta" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,7 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/greenDark_boavizt</item>
         <item name="android:navigationBarColor">@color/greenDark_boavizt</item>
+        <item name="android:navigationBarDividerColor">@color/greenDark_boavizt</item>
         <item name="android:windowActivityTransitions">true</item>
+        <item name="android:colorButtonNormal">@color/teal_700</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
